--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@ I'm a fan of spreadsheets and really have not met a spreadsheet that I didn't li
 
 <p>I grew up in Buffalo, MN and after compelting High School continued my education at Augsburg College in Minneapolis.</p>
 
-<p>Here's an image of my family in 2018 at Olympic National Park:</p>
+<p>Here's an image of my family in June 2018 at Olympic National Park:</p>
 
 <img width="300px" src="./images/jmgpic.jpg"/>
 
 
 <p>Social Media Links:<p/>
-<li><a target="_blank" href="https://linkedin.com/in/goodale"><li/>
-<li><a target="_blank" href="https://twitter.com/john_goodale"><li/>
+<p><a target="_blank" href="https://linkedin.com/in/goodale">LinkedIn</a><p/>
+<p><a target="_blank" href="https://twitter.com/john_goodale">Twitter<a/><p/>
+<p><a target="_blank" href="https://www.instagram.com/john_goodale">Instagram<a/><p/>
 
-</body>
+</body> 
 
 <table border="1">
     <tr>
