--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 	<title>John Goodale Bio</title>
 </head>
 <h1>John Goodale Bio</h1>
+
+<img width="300px" src="./images/jmgpic.jpg"/>
+
 <body>
 <p>Hello, I am a Husband, Father, Son, Brother and also the Director, Analytical Services 
 @ALC_SmartData. I have been married for 12+ years to my wife Crystal and we have two awesome kids, Charlie (9) & Paige (7).
@@ -11,10 +14,7 @@ I'm a fan of spreadsheets and really have not met a spreadsheet that I didn't li
 
 <p>I grew up in Buffalo, MN and after compelting High School continued my education at Augsburg College in Minneapolis.</p>
 
-<p>Here's an image of my family in June 2018 at Olympic National Park:</p>
-
-<img width="300px" src="./images/jmgpic.jpg"/>
-
+<p>The image above of my family was taken in June 2018 at Olympic National Park.</p>
 
 <p>Social Media Links:<p/>
 <p><a target="_blank" href="https://linkedin.com/in/goodale">LinkedIn</a><p/>
