--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <p>Hello, I am a Husband, Father, Son, Brother and also the Director, Analytical Services 
 @ALC_SmartData. I have been married for 12+ years to my wife Crystal and we have two awesome kids, Charlie (9) & Paige (7).
-I'm a fan of spreadsheets and really have not met a spreadsheet that I didn't like.</p>
+I'm a big fan of spreadsheets... and truthfully haven't met a spreadsheet that I didn't like.</p>
 
 <p>I grew up in Buffalo, MN and after compelting High School continued my education at Augsburg College in Minneapolis.</p>
 
