--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ I'm a big fan of spreadsheets... and truthfully haven't met a spreadsheet that I
     <tr>
         <td>Time Bomb - Rancid</td>
         <td>Usual Suspects</td>
-        <td>Spending time with Family</td>
+        <td>Spending time w/ Family</td>
     </tr>
     <tr>
         <td>Flagpole Sitta - Harvey Danger</td>
@@ -40,7 +40,7 @@ I'm a big fan of spreadsheets... and truthfully haven't met a spreadsheet that I
         <td>Playing sports</td>
     </tr>
     <tr>
-        <td>White Wedding - Billy Idol</td>
+		<td>High & Dry - Radiohead<td/>
         <td>The Breakfast Club</td>
         <td>Camping</td>
         </tr>
