--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ I'm a big fan of spreadsheets... and truthfully haven't met a spreadsheet that I
         <td>Playing sports</td>
     </tr>
     <tr>
-		<td>High & Dry - Radiohead<td/>
+		<td>High & Dry - Radiohead</td>
         <td>The Breakfast Club</td>
         <td>Camping</td>
         </tr>
